test_fm/_test09.ref
Error: unknown superclass 'Superclass' in '_test09.nj' on line 6
