test_fm/_test09.nj
//
// class declarations
// unknown superclass
//

public class Main extends Superclass {
    public static void main(){}
}

